# HumanSL_MAIN

./: .gitignore  BaseFrameStandAlone.cpp  CMakeLists.txt  README.md  main.cpp  main_impedance.cpp  main_test.cpp  test_kinova.cpp  test_vicon.cpp
Christian_control/basic_control/: CMakeLists.txt  README.md  basic_control.cpp
Christian_control/joint_control/: DESIGN.md  DESIGN_M2.md  PLAN.md  PLAN_M3_torque.md
TrajectoryExecution/: CMakeLists.txt  CMakeLists.txt.backup
TrajectoryExecution/include/: Controller.h  Dynamics.h  Filter.h  Fwd_kinematics.h  ImpedanceControl.h  Jacobian.h  KinovaGripper.h  KinovaTrajectory.h  KinovaTrajectory.h.backup
TrajectoryExecution/src/: Controller.cpp  Dynamics.cpp  Filter.cpp  Fwd_kinematics.cpp  ImpedanceControl.cpp  Jacobian.cpp  KinovaTrajectory.cpp  main.cpp
TrajectoryGeneration/: CMakeLists.txt  CMakeLists.txt.backup
TrajectoryGeneration/config/: dh_params.yaml  joint_limits.yaml
TrajectoryGeneration/include/: GenerateArmModel.h  GenerateLogs.h  GenerateTrajectory.h  JerkPenaltyFactor.h  Obstacles.h  TrajectoryInitiation.h  TrajectoryOptimization.h  Tube.h  analytical_ik.h  quik_solveIK.h  utils.h
TrajectoryGeneration/src/: GenerateArmModel.cpp  GenerateLogs.cpp  Obstacles.cpp  TrajectoryInitiation.cpp  TrajectoryOptimization.cpp  utils.cpp
TrajectoryRealTime/: CMakeLists.txt
TrajectoryRealTime/include/: core.h  move.h  plan.h  sdf.h  task_parameters.h
TrajectoryRealTime/joint_mpc/: .gitignore  CMakeLists.txt  README.md
TrajectoryRealTime/joint_mpc/include/: control_driver.h  controllers.h  gen3_limits.h  joint_controller.h  joint_types.h  mpc_controller.h  setpoint_queue.h  sim_backend.h  switchable_controller.h
TrajectoryRealTime/joint_mpc/test/: test_joint_control.cpp
TrajectoryRealTime/src/: core.cpp  move.cpp  plan.cpp  sdf.cpp  task_parameters.cpp
ViconDataStream/: CMakeLists.txt
ViconDataStream/include/: ViconInfo.h  ViconInterface.h
ViconDataStream/src/: ViconInfo.cpp  ViconInterface.cpp
config/: GEN3_With_GRIPPER_DYNAMICS.urdf  dh_params.yaml  parameters.yaml  task_parameters.conf
logs/: failed_plan_results.yaml  failed_task_results.yaml  plan_10_results.yaml  plan_1_results.yaml  plan_2_results.yaml  plan_3_results.yaml  plan_4_results.yaml  plan_5_results.yaml  plan_7_results.yaml  plan_8_results.yaml  replanned_results.yaml
logs/experimental_python/: plot_experiment.py
logs/experimental_results/: 08_25_14_24.csv  08_25_14_59.csv  08_25_15_13.csv  08_25_15_50.csv  08_25_15_53.csv  08_25_15_54.csv  08_25_15_58.csv  08_25_15_59.csv  08_25_16_01.csv  08_25_16_03.csv  08_25_16_08.csv  08_25_16_12.csv  08_25_16_13.csv  08_25_16_24.csv  08_25_16_25.csv  08_25_16_27.csv  08_25_16_33.csv  08_25_16_34.csv  08_25_16_37.csv  08_25_16_40.csv  08_25_17_00.csv  08_25_17_01.csv  08_26_14_29.csv  08_26_14_40.csv  08_26_14_41.csv  08_26_14_44.csv  08_26_14_47.csv  08_26_14_56.csv  08_26_16_10.csv  08_26_16_12.csv  08_26_16_13.csv  08_26_16_14.csv  08_26_16_40.csv  08_26_17_09.csv  08_26_17_10.csv  08_26_17_11.csv  08_26_17_15.csv  08_26_17_21.csv  08_26_18_32.csv  08_26_18_34.csv  (+130 more)
